# langchainessentials

llmstudies/: pyproject.toml
llmstudies/data/: chunking_embedding.ipynb  embedding.ipynb
llmstudies/src/: app.py
llmstudies/src/services/: llm_service.py  rag_service.py
llmstudies/src/services/scripts/: build_index.py
