[project]
name = "llmstudies"
version = "0.1.0"
description = ""
authors = [
    {name = "breno.oliveira",email = "brenooalves2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.0,<3.15"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pypdf (>=6.7.1,<7.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "llmstudies", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
